[gd_scene load_steps=71 format=3 uid="uid://d1yi25j50n8mv"]

[ext_resource type="Script" uid="uid://dlms5a6uy1g77" path="res://entities/player/tiny_defence_archer/tiny_defence_archer.gd" id="1_17c0v"]
[ext_resource type="Script" path="res://entities/player/player_base.gd" id="1_50yqe"]
[ext_resource type="Script" uid="uid://blufqr1j0hsw3" path="res://common/global/audio_master/AudioSFXFXRequest.gd" id="2_0ahrl"]
[ext_resource type="Texture2D" uid="uid://dbtn7i1ovkkun" path="res://assets/textures/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/Archer_Blue.png" id="2_vcd73"]
[ext_resource type="Script" uid="uid://dh4exe7ejyfjl" path="res://addons/godot_state_charts/state_chart.gd" id="4_ixjev"]
[ext_resource type="Script" uid="uid://bojdn74tmijw" path="res://addons/godot_state_charts/compound_state.gd" id="5_fhukm"]
[ext_resource type="Script" uid="uid://ccqf4j0u1rpp4" path="res://addons/godot_state_charts/atomic_state.gd" id="6_6ip3s"]
[ext_resource type="Script" uid="uid://c5vw5h3jef1hf" path="res://addons/godot_state_charts/transition.gd" id="7_0sihj"]

[sub_resource type="Resource" id="Resource_ogxo6"]
script = ExtResource("2_0ahrl")
AudioPath = "res://assets/sounds/arrow/384917__ali_6868__bow-release-bow-and-arrow-4.ogg"
RemoveAtEnd = true
ModPitch = 1.0
ModVolume = 0.0
IsRand = true
RandPitch = 0.2
RandVolume = 0.0
RemovePreviousAudio = Array[String]([])
metadata/_custom_type_script = ExtResource("2_0ahrl")

[sub_resource type="Shader" id="Shader_0sihj"]
code = "shader_type canvas_item;

uniform vec4 color : source_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;

		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}

		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);

			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}

	return false;
}

void fragment() {
	vec2 uv = UV;

	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));

		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;

		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}

	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogxo6"]
resource_local_to_scene = true
shader = SubResource("Shader_0sihj")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 2.0
shader_parameter/pattern = 2
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="AtlasTexture" id="AtlasTexture_17c0v"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixjev"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhukm"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ip3s"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sihj"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnme8"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y7g3"]
atlas = ExtResource("2_vcd73")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa38s"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ecwe"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrvhf"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sorns"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6muk"]
atlas = ExtResource("2_vcd73")
region = Rect2(1152, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b4yv"]
atlas = ExtResource("2_vcd73")
region = Rect2(1344, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqrta"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc5ch"]
atlas = ExtResource("2_vcd73")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gue54"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuq3i"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkhj6"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0svwr"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lespl"]
atlas = ExtResource("2_vcd73")
region = Rect2(1152, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_teba0"]
atlas = ExtResource("2_vcd73")
region = Rect2(1344, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixs5n"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbbkn"]
atlas = ExtResource("2_vcd73")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdx06"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8i6i"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wh48"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_agxyj"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ovjs"]
atlas = ExtResource("2_vcd73")
region = Rect2(1152, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_drnrr"]
atlas = ExtResource("2_vcd73")
region = Rect2(1344, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhcv"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxk7r"]
atlas = ExtResource("2_vcd73")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dyqm"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lgqo"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oofc0"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmcof"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uovvj"]
atlas = ExtResource("2_vcd73")
region = Rect2(1152, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eq3d"]
atlas = ExtResource("2_vcd73")
region = Rect2(1344, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucmv1"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_58yjc"]
atlas = ExtResource("2_vcd73")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb05h"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eejxf"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuvba"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pts3n"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lgbk"]
atlas = ExtResource("2_vcd73")
region = Rect2(1152, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qur84"]
atlas = ExtResource("2_vcd73")
region = Rect2(1344, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcd73"]
atlas = ExtResource("2_vcd73")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ahrl"]
atlas = ExtResource("2_vcd73")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogxo6"]
atlas = ExtResource("2_vcd73")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yygf2"]
atlas = ExtResource("2_vcd73")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_haifh"]
atlas = ExtResource("2_vcd73")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmx7x"]
atlas = ExtResource("2_vcd73")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ahrl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17c0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixjev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhukm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ip3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sihj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnme8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y7g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa38s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ecwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sorns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6muk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b4yv")
}],
"loop": false,
"name": &"shot_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqrta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc5ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gue54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuq3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkhj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0svwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lespl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teba0")
}],
"loop": false,
"name": &"shot_flat",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixs5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbbkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdx06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8i6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wh48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agxyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ovjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drnrr")
}],
"loop": false,
"name": &"shot_tilt_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxk7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lgqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oofc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmcof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uovvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eq3d")
}],
"loop": false,
"name": &"shot_tilt_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucmv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58yjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb05h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eejxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuvba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pts3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lgbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qur84")
}],
"loop": false,
"name": &"shot_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcd73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ahrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogxo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yygf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haifh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmx7x")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vcd73"]
radius = 15.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ahrl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogxo6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yygf2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_haifh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pmx7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ucmv1"]

[node name="TinyDefenceArcher" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_17c0v")
arrow_release_sfx = Array[ExtResource("2_0ahrl")]([SubResource("Resource_ogxo6")])
metadata/_custom_type_script = ExtResource("1_50yqe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ogxo6")
sprite_frames = SubResource("SpriteFrames_0ahrl")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_vcd73")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0ahrl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogxo6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yygf2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_haifh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pmx7x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ucmv1")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_ixjev")
metadata/_custom_type_script = ExtResource("4_ixjev")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_fhukm")
initial_state = NodePath("Idle")
metadata/_custom_type_script = ExtResource("5_fhukm")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("6_6ip3s")
metadata/_custom_type_script = ExtResource("6_6ip3s")

[node name="ToAttack" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("7_0sihj")
to = NodePath("../../Attck")
event = &"idle_to_attack"
delay_in_seconds = "1.0"
metadata/_custom_type_script = ExtResource("7_0sihj")

[node name="ToRage" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("7_0sihj")
to = NodePath("../../Rage")
event = &"to_rage"
delay_in_seconds = "0.0"

[node name="Attck" type="Node" parent="StateChart/Root"]
script = ExtResource("6_6ip3s")
metadata/_custom_type_script = ExtResource("6_6ip3s")

[node name="ToIdle" type="Node" parent="StateChart/Root/Attck"]
script = ExtResource("7_0sihj")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"
metadata/_custom_type_script = ExtResource("7_0sihj")

[node name="ToRage" type="Node" parent="StateChart/Root/Attck"]
script = ExtResource("7_0sihj")
to = NodePath("../../Rage")
event = &"to_rage"
delay_in_seconds = "0.0"

[node name="Rage" type="Node" parent="StateChart/Root"]
script = ExtResource("6_6ip3s")

[node name="ToIdle" type="Node" parent="StateChart/Root/Rage"]
script = ExtResource("7_0sihj")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"
metadata/_custom_type_script = ExtResource("7_0sihj")

[node name="PowerIntervalTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attck" to="." method="_on_attck_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Rage" to="." method="_on_rage_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Rage" to="." method="_on_rage_state_exited"]
